--- a/index.html
+++ b/index.html
@@ -11,24 +11,27 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet">
+    <!-- added font awesome -->
+    <script src="https://kit.fontawesome.com/2a971a071b.js" crossorigin="anonymous"></script>
     <!-- added tailwind and daisy ui -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.4.0/dist/full.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- custom class -->
     <script>
         tailwind.config = {
-          theme: {
-            extend: {
-              colors: {
-                clifford: '#da373d',
-              }
+            theme: {
+                extend: {
+                    colors: {
+                        'color-primary': '#F85559',
+                        clifford: '#da373d',
+                    }
+                }
             }
-          }
         }
-      </script>
+    </script>
     <!-- common shared style -->
     <style>
-        .font-lato{
+        .font-lato {
             font-family: 'Lato', sans-serif;
         }
     </style>
@@ -36,8 +39,51 @@
 </head>
 
 <body>
-    <header>
-        hello
+    <header class="max-w-7xl mx-auto ">
+        <!-- nav section starts here -->
+        <section class="my-14">
+            <div class="navbar lg:bg-color-primary lg:px-5 h-[120px] rounded-full">
+                <!-- nav start -->
+                <div class="navbar-start hidden lg:block">
+                    <ul class="menu menu-horizontal px-1 text-lg text-[#fff] font-lato font-medium">
+                        <li><a>Home</a></li>
+                        <li><a>About Us</a></li>
+                        <li><a>Shop</a></li>
+                        <li><a>All Fruits</a></li>
+                    </ul>
+                </div>
+                <!-- nav center -->
+                <div class="navbar-center lg:flex gap-3">
+                    <img class="w-[50px]" src="./images/logo.png" alt="">
+                    <h3 class="text-4xl lg:text-[#fff] font-lato font-bold">Fruit Burst</h3>
+                </div>
+                <!-- nav end -->
+                <div class="navbar-end lg:pr-5 ">
+                    <div class="border-2 bg-white rounded-full lg:px-7 hidden lg:block ">
+                        <input class="text-base text-[#12121266] border-0 outline-none p-3 font-lato rounded-full "
+                            type="text" placeholder="Search here"> <i class="fa-solid fa-magnifying-glass"></i>
+                    </div>
+                </div>
+                <!-- small device dropdown items -->
+                <div class="dropdown">
+                    <label tabindex="0" class="btn btn-ghost lg:hidden">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+                            stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M4 6h16M4 12h8m-8 6h16" />
+                        </svg>
+                    </label>
+                    <ul tabindex="0"
+                        class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box text-xs">
+                        <li><a>Home</a></li>
+                        <li><a>About Us</a></li>
+                        <li><a>Shop</a></li>
+                        <li><a>All Fruits</a></li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+        <!-- nav section ends here -->
     </header>
     <main>
 
