add banner section

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <body>
     <header class="max-w-7xl mx-auto ">
         <!-- nav section starts here -->
-        <section class="my-14">
+        <section class="lg:my-14">
             <div class="navbar lg:bg-color-primary lg:px-5 h-[120px] rounded-full">
                 <!-- nav start -->
                 <div class="navbar-start hidden lg:block">
@@ -58,9 +58,9 @@
                     <h3 class="text-4xl lg:text-[#fff] font-lato font-bold">Fruit Burst</h3>
                 </div>
                 <!-- nav end -->
-                <div class="navbar-end lg:pr-5 ">
+                <div class="navbar-end lg:pr-5 cursor-pointer ">
                     <div class="border-2 bg-white rounded-full lg:px-7 hidden lg:block ">
-                        <input class="text-base text-[#12121266] border-0 outline-none p-3 font-lato rounded-full "
+                        <input class="text-base text-[#12121266] border-0 outline-none p-3 font-lato rounded-full  "
                             type="text" placeholder="Search here"> <i class="fa-solid fa-magnifying-glass"></i>
                     </div>
                 </div>
@@ -84,6 +84,91 @@
             </div>
         </section>
         <!-- nav section ends here -->
+
+        <!-- banner section starts here -->
+        <section class="mb-60 relative">
+            <!-- slider container -->
+            <div class="carousel w-full">
+                <!-- slider 1 -->
+                <div id="slide1" class="carousel-item relative w-full">
+                  <img src="./images/banner1.png" class="w-full opacity-70 " />
+                  <div class="absolute flex justify-between items-center transform -translate-y-1/2 left-5 right-5 top-1/2">
+                    <a href="#slide4" class="btn btn-circle bg-black text-white">❮</a>
+                    <div class="text-center w-[700px]">
+                        <h1 class="text-xl lg:text-7xl text-[#fff] font-lato font-extrabold lg:mb-5 ">Exotic tastes at your doorstep</h1>
+                        <p class=" lg:text-xl text-[#fff] font-lato font-medium mb-3 lg:mb-10">We supply highly quality organic products</p>
+                        <button class=" lg:text-xl text-[#fff] font-lato font-extrabold bg-color-primary rounded-lg py-3 px-4">Shop Now</button>
+                    </div> 
+                    <a href="#slide2" class="btn btn-circle bg-black text-white">❯</a>
+                  </div>
+                </div>
+                <!-- slider 2 -->
+                <div id="slide2" class="carousel-item relative w-full">
+                  <img src="./images/banner2.png" class="w-full opacity-70 " />
+                  <div class="absolute flex justify-between items-center transform -translate-y-1/2 left-5 right-5 top-1/2">
+                    <a href="#slide1" class="btn btn-circle bg-black text-white">❮</a>
+                    <div class="text-center w-[700px]">
+                        <h1 class="text-xl lg:text-7xl text-[#fff] font-lato font-extrabold lg:mb-5 ">Exotic tastes at your doorstep</h1>
+                        <p class=" lg:text-xl text-[#fff] font-lato font-medium mb-3 lg:mb-10">We supply highly quality organic products</p>
+                        <button class=" lg:text-xl text-[#fff] font-lato font-extrabold bg-color-primary rounded-lg py-3 px-4">Shop Now</button>
+                    </div> 
+                    <a href="#slide3" class="btn btn-circle bg-black text-white">❯</a>
+                  </div>
+                </div>
+                <!-- slider 3 -->
+                <div id="slide3" class="carousel-item relative w-full">
+                  <img src="./images/banner3.png" class="w-full opacity-70 " />
+                  <div class="absolute flex justify-between items-center transform -translate-y-1/2 left-5 right-5 top-1/2">
+                    <a href="#slide2" class="btn btn-circle bg-black text-white">❮</a>
+                    <div class="text-center w-[700px]">
+                        <h1 class="text-xl lg:text-7xl text-[#fff] font-lato font-extrabold lg:mb-5 ">Exotic tastes at your doorstep</h1>
+                        <p class=" lg:text-xl text-[#fff] font-lato font-medium mb-3 lg:mb-10">We supply highly quality organic products</p>
+                        <button class=" lg:text-xl text-[#fff] font-lato font-extrabold bg-color-primary rounded-lg py-3 px-4">Shop Now</button>
+                    </div> 
+                    <a href="#slide4" class="btn btn-circle bg-black text-white">❯</a>
+                  </div>
+                </div>
+                <!-- slider 4 -->
+                <div id="slide4" class="carousel-item relative w-full">
+                  <img src="./images/banner4.png" class="w-full opacity-70 " />
+                  <div class="absolute flex justify-between items-center transform -translate-y-1/2 left-5 right-5 top-1/2">
+                    <a href="#slide3" class="btn btn-circle bg-black text-white">❮</a>
+                    <div class="text-center w-[700px]">
+                        <h1 class="text-xl lg:text-7xl text-[#fff] font-lato font-extrabold lg:mb-5 ">Exotic tastes at your doorstep</h1>
+                        <p class=" lg:text-xl text-[#fff] font-lato font-medium mb-3 lg:mb-10">We supply highly quality organic products</p>
+                        <button class=" lg:text-xl text-[#fff] font-lato font-extrabold bg-color-primary rounded-lg py-3 px-4">Shop Now</button>
+                    </div> 
+                    <a href="#slide1" class="btn btn-circle bg-black text-white">❯</a>
+                  </div>
+                </div>
+            </div>
+            <!-- fruits -->
+            <div class="hidden lg:block">
+                <div class="flex justify-around items-center w-[1100px] mx-auto  h-[150px] bg-[#fff] rounded-lg shadow-xl text-xl text-[#121212CC] font-lato font-medium text-center absolute left-24 -bottom-16">
+                    <div>
+                        <img class="w-[100px]" src="./images/fruit1.png" alt="">
+                        <p>Strawberry</p>
+                    </div>
+                    <div>
+                        <img class="w-[80px]" src="./images/fruit2.png" alt="">
+                        <p>Orange</p>
+                    </div>
+                    <div>
+                        <img class="w-[100px]" src="./images/fruit3.png" alt="">
+                        <p>Mango</p>
+                    </div>
+                    <div>
+                        <img class="w-[100px]" src="./images/fruit4.png" alt="">
+                        <p>Strawberry</p>
+                    </div>
+                    <div>
+                        <img class="w-[100px]" src="./images/fruit5.png" alt="">
+                        <p>Mango</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- banner section ends here -->
     </header>
     <main>
 
