add meet team section

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
         tailwind.config = {
             theme: {
                 extend: {
+                    backgroundImage: {
+                        'bg-team': "url(./images/team.png)",
+                    },
+
                     colors: {
                         'color-primary': '#F85559',
                         clifford: '#da373d',
@@ -570,10 +574,86 @@
             </div>
             <!-- deal button -->
             <div class="flex justify-center">
-            <button class=" lg:text-xl text-[#fff] font-lato font-extrabold bg-color-primary rounded-lg py-3 px-4">Shop All</button>
+                <button
+                    class=" lg:text-xl text-[#fff] font-lato font-extrabold bg-color-primary rounded-lg py-3 px-4">Shop
+                    All</button>
             </div>
         </section>
         <!-- deal section ends here -->
+
+        <!-- meet team section starts here -->
+        <section class="my-10 text-[#fff]">
+            <div class="hero bg-bg-team w-full lg:h-[600px]">
+                <div class="hero-overlay bg-opacity-75"></div>
+                <div class="hero-content w-full h-full">
+                    <div class=" w-full h-full lg:p-5 text-center ">
+                        <!-- heading -->
+                        <h2 class="text-3xl lg:text-5xl font-lato font-extrabold lg:mt-16 mb-5">Meet the team section
+                        </h2>
+                        <p class="lg:text-base font-lato font-medium lg:w-[600px] mx-auto mb-4">Contrary to popular
+                            belief, is not simply random text. It has roots in a piece of classical Latin literature
+                            from 45 BC, making it over 2000 years old.</p>
+
+                        <!-- instructor container -->
+                        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 lg:mt-14 gap-1">
+                            <!-- instructor 1 -->
+                            <div class="mb-4">
+                                <img class="w-[100px] h-[100px] mx-auto" src="./images/member1.png" alt="">
+                                <h4 class="text-2xl font-lato font-bold lg:mt-7">Awlad Hossain</h4>
+                                <p class="text-base font-lato font-medium">Fruits Expert</p>
+                                <!-- icons -->
+                                <div class="flex justify-center
+                                mt-3 gap-2">
+                                    <img class="w-[24px] h-[24px]" src="./images/icons/fb-member.png" alt="">
+                                    <img class="w-[24px] h-[24px]" src="./images/icons/twitter-member.png" alt="">
+                                    <img class="w-[24px] h-[24px]" src="./images/icons/linkedin-member.png" alt="">
+                                </div>
+                            </div>
+                            <!-- instructor 2 -->
+                            <div class="mb-4">
+                                <img class="w-[100px] h-[100px] mx-auto" src="./images/member2.png" alt="">
+                                <h4 class="text-2xl font-lato font-bold lg:mt-7">Safia Chowdhury</h4>
+                                <p class="text-base font-lato font-medium">Fruits Expert</p>
+                                <!-- icons -->
+                                <div class="flex justify-center
+                                mt-3 gap-2">
+                                    <img class="w-[24px] h-[24px]" src="./images/icons/fb-member.png" alt="">
+                                    <img class="w-[24px] h-[24px]" src="./images/icons/twitter-member.png" alt="">
+                                    <img class="w-[24px] h-[24px]" src="./images/icons/linkedin-member.png" alt="">
+                                </div>
+                            </div>
+                            <!-- instructor 3 -->
+                            <div class="mb-4">
+                                <img class="w-[100px] h-[100px] mx-auto" src="./images/member3.png" alt="">
+                                <h4 class="text-2xl font-lato font-bold lg:mt-7">Rokib Hossain</h4>
+                                <p class="text-base font-lato font-medium">Fruits Expert</p>
+                                <!-- icons -->
+                                <div class="flex justify-center
+                                mt-3 gap-2">
+                                    <img class="w-[24px] h-[24px]" src="./images/icons/fb-member.png" alt="">
+                                    <img class="w-[24px] h-[24px]" src="./images/icons/twitter-member.png" alt="">
+                                    <img class="w-[24px] h-[24px]" src="./images/icons/linkedin-member.png" alt="">
+                                </div>
+                            </div>
+                            <!-- instructor 4 -->
+                            <div class="mb-4">
+                                <img class="w-[100px] h-[100px] mx-auto" src="./images/member4.png" alt="">
+                                <h4 class="text-2xl font-lato font-bold lg:mt-7">Chaity</h4>
+                                <p class="text-base font-lato font-medium">Fruits Expert</p>
+                                <!-- icons -->
+                                <div class="flex justify-center
+                                mt-3 gap-2">
+                                    <img class="w-[24px] h-[24px]" src="./images/icons/fb-member.png" alt="">
+                                    <img class="w-[24px] h-[24px]" src="./images/icons/twitter-member.png" alt="">
+                                    <img class="w-[24px] h-[24px]" src="./images/icons/linkedin-member.png" alt="">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- meet team section ends here -->
 
         <!--  -->
 
