why choose section add and make responsive

--- a/index.html
+++ b/index.html
@@ -655,7 +655,110 @@
         </section>
         <!-- meet team section ends here -->
 
-        <!--  -->
+        <!-- why choose section starts here  -->
+        <section>
+            <div class="py-14">
+                <!-- heading -->
+                <div class="text-center mb-8">
+                    <h2 class="text-5xl text-[#121212] font-lato font-extrabold mb-5">Why Choose Us</h2>
+                    <p class="text-base text-[#12121299] font-lato font-medium lg:w-[600px] mx-auto">Contrary to popular
+                        belief, is not simply random text. It has roots in a piece of classical Latin literature from 45
+                        BC, making it over 2000 years old.</p>
+                </div>
+
+                <!-- why choose content container-->
+                <div class="grid grid-cols-1 lg:grid-cols-3 items-center">
+                    <!-- left site content -->
+                    <div>
+                        <!-- condition 1 -->
+                        <div class="flex flex-col lg:flex-row items-center gap-2 mb-5 mt-3">
+                            <div class="bg-[#E7E7E7] w-[50px] h-[40px] p-3 rounded-full ">
+                                <img class="w-[20px] mx-auto" src="./images/icons/group.png" alt="">
+                            </div>
+                            <div class="max-w-sm lg:w-auto mx-auto lg:mx-0 text-center lg:text-start">
+                                <h4 class="text-2xl text-[#121212] font-lato font-extrabold">Dedicated Team</h4>
+                                <div class="border-2 border-[#1212121A] w-[100px] mx-auto lg:mx-0 my-3"></div>
+                                <p class="text-base text-[#121212] font-lato font-medium lg:w-[354px]">Professional
+                                    employees are there for you to pick the most amazing and fresh fruits.</p>
+                            </div>
+                        </div>
+                        <!-- condition 2 -->
+                        <div class="flex flex-col lg:flex-row items-center gap-2 mb-5 mt-3">
+                            <div class="bg-[#E7E7E7] w-[50px] h-[40px] p-3 rounded-full ">
+                                <img class="w-[20px] mx-auto" src="./images/icons/love.png" alt="">
+                            </div>
+                            <div class="max-w-sm lg:w-auto mx-auto lg:mx-0 text-center lg:text-start">
+                                <h4 class="text-2xl text-[#121212] font-lato font-extrabold">Fresh is Best</h4>
+                                <div class="border-2 border-[#1212121A] w-[100px] mx-auto lg:mx-0 my-3"></div>
+                                <p class="text-base text-[#121212] font-lato font-medium lg:w-[354px]">Professional
+                                    employees are there for you to pick the most amazing and fresh fruits.</p>
+                            </div>
+                        </div>
+                        <!-- condition 3 -->
+                        <div class="flex flex-col lg:flex-row items-center gap-2 mb-5 mt-3">
+                            <div class="bg-[#E7E7E7] w-[50px] h-[40px] p-3 rounded-full ">
+                                <img class="w-[20px] mx-auto" src="./images/icons/gift-box.png" alt="">
+                            </div>
+                            <div class="max-w-sm lg:w-auto mx-auto lg:mx-0 text-center lg:text-start">
+                                <h4 class="text-2xl text-[#121212] font-lato font-extrabold">Gift Certificates</h4>
+                                <div class="border-2 border-[#1212121A] w-[100px] mx-auto lg:mx-0 my-3"></div>
+                                <p class="text-base text-[#121212] font-lato font-medium lg:w-[354px]">Professional
+                                    employees are there for you to pick the most amazing and fresh fruits.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- center img -->
+                    <div class="order-first lg:order-none">
+                        <img class="lg:w-[464px] lg:h-[350px]" src="./images/whychoose1.png" alt="">
+                    </div>
+                    <!-- right site content -->
+                    <div>
+                        <!-- condition 1 -->
+                        <div class="flex flex-col lg:flex-row items-center gap-2 mb-5 mt-3">
+                            <div class=" lg:text-end max-w-sm lg:w-auto mx-auto lg:mx-0 text-center">
+                                <h4 class="text-2xl text-[#121212] font-lato font-extrabold">Integrated Supplier</h4>
+                                <div class="lg:ml-64 border-2 border-[#1212121A] w-[100px] mx-auto lg:max-0 my-3 ">
+                                </div>
+                                <p class="text-base text-[#121212] font-lato font-medium lg:w-[354px]">Professional
+                                    employees are there for you to pick the most amazing and fresh fruits.</p>
+                            </div>
+                            <div class="bg-[#E7E7E7] w-[50px] h-[40px] p-3 rounded-full ">
+                                <img class="w-[20px] mx-auto" src="./images/icons/fruit.png" alt="">
+                            </div>
+                        </div>
+                        <!-- condition 2 -->
+                        <div class="flex flex-col lg:flex-row items-center gap-2 mb-5 mt-3">
+                            <div class=" lg:text-end max-w-sm lg:w-auto mx-auto lg:mx-0 text-center">
+                                <h4 class="text-2xl text-[#121212] font-lato font-extrabold">Sustainable Practice</h4>
+                                <div class="lg:ml-64 border-2 border-[#1212121A] w-[100px] mx-auto lg:max-0 my-3 ">
+                                </div>
+                                <p class="text-base text-[#121212] font-lato font-medium lg:w-[354px]">Professional
+                                    employees are there for you to pick the most amazing and fresh fruits.</p>
+                            </div>
+                            <div class="bg-[#E7E7E7] w-[50px] h-[40px] p-3 rounded-full ">
+                                <img class="w-[20px] mx-auto" src="./images/icons/ice-cream.png" alt="">
+                            </div>
+                        </div>
+                        <!-- condition 3 -->
+                        <div class="flex flex-col lg:flex-row items-center gap-2 mb-5 mt-3">
+                            <div class=" lg:text-end max-w-sm lg:w-auto mx-auto lg:mx-0 text-center">
+                                <h4 class="text-2xl text-[#121212] font-lato font-extrabold">The Benefits Only</h4>
+                                <div class="lg:ml-64 border-2 border-[#1212121A] w-[100px] mx-auto lg:max-0 my-3 ">
+                                </div>
+                                <p class="text-base text-[#121212] font-lato font-medium lg:w-[354px]">Professional
+                                    employees are there for you to pick the most amazing and fresh fruits.</p>
+                            </div>
+                            <div class="bg-[#E7E7E7] w-[50px] h-[40px] p-3 rounded-full ">
+                                <img class="w-[20px] mx-auto" src="./images/icons/like.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- why choose section ends here  -->
+
+        
 
 
 
