--- a/index.html
+++ b/index.html
@@ -661,7 +661,7 @@
                 <!-- heading -->
                 <div class="text-center mb-8">
                     <h2 class="text-5xl text-[#121212] font-lato font-extrabold mb-5">Why Choose Us</h2>
-                    <p class="text-base text-[#12121299] font-lato font-medium lg:w-[600px] mx-auto">Contrary to popular
+                    <p class="text-base text-[#12121299] font-lato font-medium md:w-[600px] lg:w-[600px] mx-auto">Contrary to popular
                         belief, is not simply random text. It has roots in a piece of classical Latin literature from 45
                         BC, making it over 2000 years old.</p>
                 </div>
@@ -709,7 +709,7 @@
                     </div>
                     <!-- center img -->
                     <div class="order-first lg:order-none">
-                        <img class="lg:w-[464px] lg:h-[350px]" src="./images/whychoose1.png" alt="">
+                        <img class="w-auto mx-auto lg:w-[464px] lg:h-[350px]" src="./images/whychoose1.png" alt="">
                     </div>
                     <!-- right site content -->
                     <div>
@@ -757,14 +757,32 @@
             </div>
         </section>
         <!-- why choose section ends here  -->
-
-        
-
-
-
     </main>
-    <footer>
-
+    <footer class="bg-[#121212]">
+        <section class="max-w-7xl mx-auto">
+         <div class="text-[#fff] lg:w-[700px] mx-auto p-12">
+            <div class="flex gap-3 justify-center mb-8 ">
+                <img class="w-[50px]" src="./images/logo.png" alt="">
+                <h3 class="text-4xl lg:text-[#fff] font-lato font-bold">Fruit Burst</h3>
+            </div>
+            <div class="flex flex-wrap list-none justify-center gap-6 mb-8">
+                    <li><a>Home</a></li>
+                    <li><a>About Us</a></li>
+                    <li><a>Shop</a></li>
+                    <li><a>All Fruits</a></li>
+                    <li><a>Support</a></li>
+                    <li><a>My Account</a></li>
+            </div>
+            <div class="flex justify-center gap-6 ">
+                <img class="w-[30px] h-[30px]" src="./images/icons/twitter.png" alt="">
+                <img class="w-[30px] h-[30px]" src="./images/icons/facebook.png" alt="">
+                <img class="w-[30px] h-[30px]" src="./images/icons/youtube.png" alt="">
+                <img class="w-[30px] h-[30px]" src="./images/icons/linkedin.png" alt="">
+                <img class="w-[30px] h-[30px]" src="./images/icons/instagram.png" alt="">
+                <img class="w-[30px] h-[30px]" src="./images/icons/apple.png" alt="">
+            </div>
+         </div>
+        </section>
     </footer>
 </body>
 
